# dispatch

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  IDEAS.md  Justfile  TODO.md
design/: api.md  architecture.md  branding.md  cli.md  data-model.md  dispatch.md  patchbay.md  ui.md  workflows.md
dev-bin/: dispatch
dispatch-api-client/: Cargo.toml
dispatch-api-client/src/: lib.rs
dispatch-cli/: Cargo.toml
dispatch-cli/src/: commands.rs  context.rs  git_guard.rs  main.rs  output.rs  render.rs  runner.rs
dispatch-operator/: Cargo.toml
dispatch-operator/src/: main.rs
dispatch-server/: Cargo.toml
dispatch-server/src/: lib.rs  main.rs  tracing_init.rs
dispatch-server/src/backend/: agent_ids.rs  agent_tools.rs  api.rs  app_state.rs  automation.rs  automation_admission.rs  automation_bundles.rs  automation_cli.rs  automation_commit.rs  automation_controller.rs  automation_output.rs  automation_postconditions.rs  automation_prompt.rs  automation_revisions.rs  automation_routing.rs  automation_runtime.rs  automation_triggers.rs  automation_workspace.rs  (+33 more)
dispatch-server/style/: main.scss
dispatch-server/tests/: browser_test.rs
dispatch-types/: Cargo.toml
dispatch-types/src/: lib.rs
examples/automation/: engineering-review.yaml
patchbay-api-client/src/: lib.rs
patchbay-cli/src/: commands.rs  context.rs  git_guard.rs  main.rs  render.rs  runner.rs
patchbay-server/: Cargo.toml
patchbay-server/src/: main.rs  tracing_init.rs
patchbay-server/tests/: browser_test.rs
patchbay-types/: Cargo.toml
patchbay-types/src/: lib.rs
scripts/: derive-icons.sh
(+159 files in other folders)
