[package]
name = "dispatch-api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
dispatch-types = { path = "../dispatch-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rootcause = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
