[package]
name = "dispatch-operator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dispatch-operator"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dispatch-api-client = { path = "../dispatch-api-client" }
dispatch-types = { path = "../dispatch-types" }
rootcause = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
yaml_serde = "0.10"
